--- a/style2.css
+++ b/style2.css
@@ -13,8 +13,28 @@ body{
     background-color: rgb(white);
 }
 
-}
+
 ul{
     padding-left: 1em;
     list-style-type: square;
+}
+.nav{
+    background-color: #333;
+    overflow: hidden;
+}
+.nav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.nav a:hover{
+background-color: #ddd;
+color: black;
+}
+.nav a.active {
+    background-color: #4CAF50;
+    color: white;
 }
