--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ transition: background-color 0.2s ease-in-out;
 }
 .nav a:not(:hover){
     background-color: #333;
-    color: black;
+    color: white;
     transition: background-color 0.2s ease-in-out;
     }
 .nav a.active {
