--- a/style2.css
+++ b/style2.css
@@ -21,6 +21,7 @@ ul{
 .nav{
     background-color: #333;
     overflow: hidden;
+    transition: background-color 0.2s ease-in-out;
 }
 .nav a {
     float: left;
@@ -33,7 +34,13 @@ ul{
 .nav a:hover{
 background-color: #ddd;
 color: black;
+transition: background-color 0.2s ease-in-out;
 }
+.nav a:not(:hover){
+    background-color: #333;
+    color: white;
+    transition: background-color 0.2s ease-in-out;
+    }
 .nav a.active {
     background-color: #4CAF50;
     color: white;
