--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ font-weight: bold;
 
 body{
     background-color: rgb(white);
+    margin: 0; 
 }
 
 
@@ -18,13 +19,22 @@ ul{
     padding-left: 1em;
     list-style-type: square;
 }
+.nav p{
+    text-align:center;
+    color:white;
+    padding-top: 50px;
+    font-size: 20pt;
+    padding-bottom: none;
+}
 .nav{
     background-color: #333;
     overflow: hidden;
     transition: background-color 0.2s ease-in-out;
+    padding-bottom: 25px;
+    margin: 0;
 }
 .nav a {
-    float: left;
+    float: right;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
